--- a/source/localizable/about.br.html.slim
+++ b/source/localizable/about.br.html.slim
@@ -21,13 +21,13 @@ section
             = 'Fernando Moreira. '
           = 'Moro em '
           strong= 'Curitiba/Paraná. '
-          span itemprop="jobTitle"
-            = 'Trabalho como desenvolvedor front-end '
-            / = 'na '
-            / = link_to '@pipefy', 'http://pipefy.com'
-            = ' e amo tudo relacionado a web, sou obcecado por '
-            em= 'performance '
-            = 'e desenvolvimento ágil, gosto de códigos legíveis, semânticos e reutilizáveis.'
+          = 'Trabalho como '
+          strong itemprop="jobTitle"
+            = 'front-end developer'
+          = ' e '
+          strong itemprop="jobTitle"
+            = 'UX strategist'
+          = ', amo tudo relacionado a web, sou obcecado por performance e desenvolvimento ágil, gosto de códigos legíveis, semânticos e reutilizáveis.'
         p
           = 'Hoje sou especializado em desenvolvimento web usando '
           strong= link_to "Wordpress ", "http://br.wordpress.org/"
