--- a/source/assets/_sass/base/typography.sass
+++ b/source/assets/_sass/base/typography.sass
@@ -5,7 +5,7 @@ body
   color: $color-base
   font-family: $font-family-base
   font-size: 1.1rem
-  font-weight: $font-weight-light
+  font-weight: $font-weight-normal
   letter-spacing: $letter-spacing-base
   line-height: $line-height-base
   font-feature-settings: "calt" 1
