--- a/source/assets/_sass/components/hero.sass
+++ b/source/assets/_sass/components/hero.sass
@@ -5,6 +5,17 @@
   height: 100%
   width: 100%
 
+  h2
+    opacity: 0
+    transform: translate3d(0, -30px, 0)
+    animation-name: fadeInDown
+    animation-fill-mode: forwards
+    animation-duration: .6s
+    animation-delay: .3
+    font-weight: $font-weight-light
+    color: rgba($color-white, .6)
+    text-transform: lowercase
+
   .social
     animation-delay: .8s
 
