--- a/source/assets/_sass/utils/font-face.sass
+++ b/source/assets/_sass/utils/font-face.sass
@@ -1,3 +1,5 @@
+@import url('//fonts.googleapis.com/css?family=Roboto:300,400,700');
+
 @font-face
   font-family: 'Fira Code'
   src: url('../fonts/eot/FiraCode-Regular.eot')
