--- a/source/assets/_sass/utils/variables.sass
+++ b/source/assets/_sass/utils/variables.sass
@@ -1,4 +1,4 @@
-$font-family-base : -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
+$font-family-base : 'Roboto', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', Helvetica, sans-serif
 $font-family-serif : Georgia, "Times New Roman", Times, serif
 $font-family-monospace : 'Fira Code', Menlo, Monaco, 'Courier New', Courier, monospace
 
