font-weight on hero text

--- a/source/assets/_sass/components/hero.sass
+++ b/source/assets/_sass/components/hero.sass
@@ -10,6 +10,7 @@
     transform: translate3d(0, -30px, 0)
     animation-name: fadeInDown
     animation-fill-mode: forwards
+    font-weight: 300
     animation-duration: .6s
     animation-delay: .3
     font-weight: $font-weight-light
