Added Barbajs to pAjax from performance

--- a/source/assets/_sass/base/base.sass
+++ b/source/assets/_sass/base/base.sass
@@ -8,6 +8,11 @@ body
   background-color: rgba(0, 0, 0, .05)
   line-height: $line-height-base
 
+  &.home--hero
+    #barba-wrapper,
+    .barba-container
+      +size(100%)
+
 hr
   border: 0
   display: block
