--- a/source/assets/_sass/footer.sass
+++ b/source/assets/_sass/footer.sass
@@ -3,13 +3,10 @@
 @import "utils/variables"
 @import "utils/mixins"
 @import "utils/font-face"
-@import "utils/utility"
 
 @import "base/selection"
 @import "base/lists"
 @import "base/table"
-// @import "base/forms"
-@import "base/buttons"
-
 @import "components/paginate"
 @import "components/footer"
+@import "components/navbar"
