--- a/source/assets/_sass/inline.sass
+++ b/source/assets/_sass/inline.sass
@@ -2,14 +2,17 @@
 
 @import "utils/variables"
 @import "utils/mixins"
+@import "utils/keyframes"
+@import "utils/utility"
 
 @import "base/reset"
 @import "base/typography"
 @import "base/base"
 @import "base/grid"
+@import "base/buttons"
 
 @import "components/hero"
-@import "components/navbar"
+@import "components/navbar-toggle"
 @import "components/header"
 @import "components/card"
 @import "components/page"
