--- a/source/assets/_sass/components/navbar.sass
+++ b/source/assets/_sass/components/navbar.sass
@@ -1,41 +1,9 @@
-.navbar-toggle
-  +position(fixed, 20px 20px null null)
-  z-index: 10000
-  padding: 20px 10px
-
-  +media($mobile-large)
-    top: 40px
-    right: 40px
-
-  &__open
-    display: block
-
-  &__close
-    display: none
-
-  svg
-    margin: 0 0 6px
-    transition: all .2s ease-in-out
-    position: relative
-    display: block
-
-  &:hover,
-  &:focus
-    background-color: transparent
-
-    .rect-top
-      transform: translateY(-2px)
-
-    .rect-bottom
-      transform: translateY(2px)
-
 .navbar
-  +position(fixed, 0)
   z-index: 999
   background-color: rgba($color-secondary, .9)
-  width: 100%
-  height: 100%
-  display: none
+  transition: .3s opacity ease, .3s visibility ease
+  +position(fixed, 0)
+  +size(100%)
 
   &__inner
     display: table-cell
@@ -123,19 +91,3 @@
 
       &.rect-bottom
         transform: rotate(-315deg) translateY(-6px)
-
-@keyframes fadeInDown
-  0%
-    opacity: 0
-    transform: translate3d(0, -30px, 0)
-
-  100%
-    opacity: 1
-    transform: translate3d(0, 0, 0)
-
-@keyframes fadeIn
-  0%
-    opacity: 0
-
-  100%
-    opacity: 1
