--- a/source/partials/_footer-scripts.slim
+++ b/source/partials/_footer-scripts.slim
@@ -1,6 +1,6 @@
 = javascript_include_tag 'main', { async: true }
 
 - if build?
-  = stylesheet_link_tag 'main.min', { async: true }
+  = stylesheet_link_tag 'footer.min', { async: true }
 - else
-  = stylesheet_link_tag 'main', { async: true }
+  = stylesheet_link_tag 'footer', { async: true }
