Added article author thumb and removed Barba.js

--- a/source/assets/_sass/base/base.sass
+++ b/source/assets/_sass/base/base.sass
@@ -4,7 +4,7 @@ body.home--hero .barba-container
   +size(100%) // include Bourbon size mixin -> http://bourbon.io/docs/#size
 
 body
-  background-color: rgba(0, 0, 0, .05)
+  background-color: #f6f7f8
   line-height: $line-height-base
 
 hr
