--- a/source/assets/_sass/components/article.sass
+++ b/source/assets/_sass/components/article.sass
@@ -66,6 +66,11 @@
   .tags a
     color: rgba(#fff, .7)
 
+    &:hover,
+    &:focus
+      color: rgba(#333, .9)
+      background-color: rgba(#fff, .7)
+
   .article-header
     text-align: center
     border-bottom: $border-base
