--- a/source/assets/_sass/components/page.sass
+++ b/source/assets/_sass/components/page.sass
@@ -3,6 +3,18 @@
   box-shadow: 0 2px 2px rgba($color-black, .1)
   margin-bottom: $spacing-base
 
+.article-author
+  position: absolute
+  bottom: 0
+  left: 50%
+  transform: translate3d(-50%, 60%, 0)
+  margin: 0
+  padding: 0
+  z-index: 10
+
+  img
+    border: 4px solid #f6f7f8
+
 .page-title
   text-align: center
   background-color: $color-primary
@@ -12,7 +24,7 @@
   background-position: center
   background-size: cover
   min-height: 300px
-  padding: 5em 0
+  padding: 10rem 0 6rem
 
   +clearfix
 
@@ -21,16 +33,8 @@
     background-color: rgba(#000, .75)
     z-index: 1
 
-  &::after
-    content: ""
-    display: block
-    background-color: $color-white
-    width: 30px
-    height: 3px
-    margin: 1rem auto 0
-
   +media($tablet-large)
-    margin-bottom: $spacing-big
+    margin-bottom: ($spacing-big * 2)
 
   h1,
   .article-meta
