--- a/src/assets/sass/_reset.sass
+++ b/src/assets/sass/_reset.sass
@@ -1,5 +1,5 @@
 html
-  font-size: 16px
+  font-size: $font-size-unit
   word-spacing: 1px
   font-family: sans-serif
   -moz-osx-font-smoothing: grayscale
@@ -7,21 +7,26 @@ html
   -webkit-text-size-adjust: 100%
   -ms-text-size-adjust: 100%
   box-sizing: border-box
+  font-feature-settings: "calt" 1
+  text-rendering: optimizeLegibility
 
 *, *:before, *:after
   box-sizing: inherit
   margin: 0
 
 body
-  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif
-  font-size: 1rem
-  line-height: 1.6
+  font-family: $font-family-base
+  font-size: $font-size-base
+  line-height: $line-height-base
+  font-weight: $font-weight-normal
+  letter-spacing: $letter-spacing-base
+  color: $color-base
   margin: 0
 
 code,
 pre
-  font-family: monospace, serif
-  font-size: 1em
+  font-family: $font-family-monospace
+  font-size: $font-family-base
 
 pre
   white-space: pre
