added humans.txt, meta tags and links for favicons

--- a/src/assets/sass/_typography.sass
+++ b/src/assets/sass/_typography.sass
@@ -1,3 +1,5 @@
+@import url('//fonts.googleapis.com/css?family=Merriweather:300,400,700|Montserrat:700');
+
 a
   color: $color-quaternary
   text-decoration: underline
@@ -39,6 +41,7 @@ h1, h2, h3, h4, h5, h6
   color: inherit
   letter-spacing: -.04rem
   font-weight: $font-weight-bold
+  font-family: $font-family-heading
 
   a
     color: inherit
