--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -1,8 +1,9 @@
-$font-family-base: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif
+$font-family-base: "Merriweather", Lato, Calibri, Arial, sans-serif
+$font-family-heading: "Montserrat", $font-family-base
 $font-family-serif: Georgia, "Times New Roman", Times, serif
 $font-family-monospace: 'Fira Code', Menlo, Monaco, 'Courier New', Courier, monospace
 
-$font-size-unit: 16px
+$font-size-unit: 18px
 $font-size-base: 1rem
 $font-size-small: .8rem
 $font-size-big: 1.2rem
@@ -22,7 +23,7 @@ $color-white: #fff
 $color-black: #222
 $color-silver: #ceddd8
 $color-gray: #222
-$color-base: lighten($color-black, 25%)
+$color-base: lighten($color-black, 15%)
 $background-base: darken($color-white, 4%)
 $border-color-base: lighten($color-silver, 6%)
 $input-background: $color-white
