--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -1,5 +1,5 @@
-$font-family-base: "Merriweather", Lato, Calibri, Arial, sans-serif
-$font-family-heading: "Montserrat", $font-family-base
+$font-family-base: "Ubuntu", Lato, Calibri, Arial, sans-serif
+$font-family-heading: 'Suez One', $font-family-base
 $font-family-serif: Georgia, "Times New Roman", Times, serif
 $font-family-monospace: 'Fira Code', Menlo, Monaco, 'Courier New', Courier, monospace
 
@@ -15,17 +15,19 @@ $font-weight-light: 300
 $font-weight-normal: 400
 $font-weight-bold: 700
 
-$color-primary: #0c59a0
-$color-secondary: #2d3643
-$color-tertiary: #008ee0
-$color-quaternary: #87c2e5
+$color-primary: #2296F4
+$color-secondary: #78AFF7
+$color-tertiary: #AAC8FA
+
 $color-white: #fff
-$color-black: #222
-$color-silver: #ceddd8
-$color-gray: #222
-$color-base: lighten($color-black, 15%)
-$background-base: darken($color-white, 4%)
-$border-color-base: lighten($color-silver, 6%)
+$color-black: #000
+
+$color-silver: #E8E8E8
+$color-gray: #201F20
+
+$color-base: #5B5B5B
+$background-base: lighten($color-silver, 4%)
+$border-color-base: #9F9E9F
 $input-background: $color-white
 
 $border-radius-base: .1875rem
