--- a/src/assets/sass/_reset.sass
+++ b/src/assets/sass/_reset.sass
@@ -14,6 +14,10 @@ html
   box-sizing: inherit
   margin: 0
 
+html,body
+  width: 100%
+  height: 100%
+
 body
   font-family: $font-family-base
   font-size: $font-size-base
