--- a/src/assets/sass/_animation.sass
+++ b/src/assets/sass/_animation.sass
@@ -1,6 +1,6 @@
 .page-enter-active,
 .page-leave-active
-  transition: opacity .2s linear
+  transition: opacity .12s ease-in-out
 
 .page-enter,
 .page-leave-to
