--- a/src/assets/sass/_reset.sass
+++ b/src/assets/sass/_reset.sass
@@ -23,6 +23,7 @@ body
   font-size: $font-size-base
   line-height: $line-height-base
   font-weight: $font-weight-normal
+  background-color: $background-base
   letter-spacing: $letter-spacing-base
   color: $color-base
   margin: 0
@@ -54,3 +55,9 @@ textarea
 table
   border-collapse: collapse
   border-spacing: 0
+
+hr
+  border: none
+  border-bottom: $border-base
+  margin-top: 1.5rem
+  margin-bottom: 1.5rem
