--- a/src/assets/sass/_grid.sass
+++ b/src/assets/sass/_grid.sass
@@ -1,5 +1,5 @@
 .container
-  max-width: $tablet-large
+  max-width: $container-width
   margin-left: auto
   margin-right: auto
   padding-right: 1rem
