added button component, store, and more animations

--- a/src/assets/sass/_base.sass
+++ b/src/assets/sass/_base.sass
@@ -23,9 +23,9 @@ body
   font-size: $font-size-base
   line-height: $line-height-base
   font-weight: $font-weight-normal
-  background-color: $background-base
+  background-color: $bg-base-color
   letter-spacing: $letter-spacing-base
-  color: $color-base
+  color: $text-color
   margin: 0
 
 code,
