--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -2,7 +2,7 @@
 @import "mixins"
 @import "placeholders"
 
-@import "reset"
+@import "base"
 @import "typography"
-@import "animation"
+@import "animations"
 @import "grid"
