--- a/src/assets/sass/_typography.sass
+++ b/src/assets/sass/_typography.sass
@@ -1,7 +1,7 @@
 @import url('//fonts.googleapis.com/css?family=Suez+One|Ubuntu:300,400,700');
 
 a
-  color: $color-primary
+  color: $primary-color
   text-decoration: underline
   transition: background-color .15s ease-in-out, color .15s ease-in-out, outline .1s ease-in-out
   border: 0
@@ -12,7 +12,7 @@ a
     text-decoration: none
 
   &:focus
-    outline: 3px solid rgba($color-primary,.7)
+    outline: 3px solid rgba($primary-color,.7)
     outline-offset: 2px
 
 em
@@ -35,7 +35,7 @@ p, dl, table, blockquote, figcaption
     margin-bottom: 0
 
 h1, h2, h3, h4, h5, h6
-  color: $color-base
+  color: $text-color
   letter-spacing: -.01rem
   font-weight: $font-weight-normal
   font-family: $font-family-heading
@@ -103,7 +103,7 @@ code
   font-family: $font-family-monospace
 
 code
-  background: rgba($color-black, .05)
+  background: rgba($gray-color, .05)
   border-radius: $border-radius-base
   color: inherit
   margin: 0 .2rem
@@ -112,8 +112,8 @@ code
   white-space: nowrap
 
 pre
-  background: rgba($color-black, .05)
-  border-left: .3rem solid $color-gray
+  background: rgba($gray-color, .05)
+  border-left: .3rem solid $gray-color
   padding: 0 ($spacing-mini / 2)
 
   & > code
