--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -15,23 +15,17 @@ $font-weight-light: 300
 $font-weight-normal: 400
 $font-weight-bold: 700
 
-$color-primary: #2296F4
-$color-secondary: #78AFF7
-$color-tertiary: #AAC8FA
-
-$color-white: #fff
-$color-black: #000
-
-$color-silver: #E8E8E8
-$color-gray: #201F20
-
-$color-base: #5B5B5B
-$background-base: lighten($color-silver, 5%)
-$border-color-base: #9F9E9F
-$input-background: $color-white
+$primary-color: #0860a8
+$secondary-color: #3084f3
+$tertiary-color: #7aa9f7
+$silver-color: #e8e8e8
+$gray-color: #201f20
+$text-color: #5b5b5b
+$bg-base-color: #f5f6fd
+$border-color: #9f9e9f
 
 $border-radius-base: .1875rem
-$border-base: .1rem solid rgba(0, 0, 0, .09)
+$border-base: .1rem solid $border-color
 
 $spacing-mini: .625rem
 $spacing-small: 1.25rem
