--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -5,14 +5,15 @@ $font-family-monospace: 'Fira Code', Menlo, Monaco, 'Courier New', Courier, mono
 
 $font-size-unit: 18px
 $font-size-base: 1rem
-$font-size-small: .7rem
+$font-size-small: .875rem
 $font-size-big: 1.2rem
 
 $line-height-base: 1.875
-$letter-spacing-base: .025rem
+$letter-spacing-base: .01rem
 
 $font-weight-light: 300
 $font-weight-normal: 400
+$font-weight-regular: 500
 $font-weight-bold: 700
 
 $primary-color: #0860a8
@@ -22,10 +23,10 @@ $silver-color: #e8e8e8
 $gray-color: #201f20
 $text-color: #5b5b5b
 $bg-base-color: #f5f6fd
-$border-color: #9f9e9f
+$border-color: #d1d2d3
 
 $border-radius-base: .1875rem
-$border-base: .1rem solid $border-color
+$border-base: .07rem solid $border-color
 
 $spacing-mini: .625rem
 $spacing-small: 1.25rem
