--- a/src/assets/sass/_typography.sass
+++ b/src/assets/sass/_typography.sass
@@ -85,8 +85,8 @@ figcaption
   font-size: $font-size-small
 
 blockquote
-  color: #999
-  font-size: 1.5em
+  color: $gray-color
+  font-size: $font-size-big
   margin-top: $spacing-base
   margin-bottom: $spacing-base
   text-align: center
@@ -113,7 +113,6 @@ code
 
 pre
   background: rgba($gray-color, .05)
-  border-left: .3rem solid $gray-color
   padding: 0 ($spacing-mini / 2)
 
   & > code
@@ -121,5 +120,5 @@ pre
     background: transparent
     border-radius: 0
     display: block
-    padding: $spacing-mini $spacing-small
+    padding: $spacing-mini $spacing-mini
     white-space: pre
