--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -16,14 +16,14 @@ $font-weight-normal: 400
 $font-weight-regular: 500
 $font-weight-bold: 700
 
-$primary-color: #0860a8
-$secondary-color: #3084f3
-$tertiary-color: #7aa9f7
-$silver-color: #e8e8e8
-$gray-color: #201f20
-$text-color: #5b5b5b
-$bg-base-color: #f5f6fd
-$border-color: #d1d2d3
+$primary-color: #0860A8
+$secondary-color: #629B96
+$tertiary-color: #FFEECB
+$silver-color: #D7E5E4
+$gray-color: #5B5B5B
+$text-color: #404756
+$bg-base-color: #F1F1E6
+$border-color: #D1D2D3
 
 $border-radius-base: .1875rem
 $border-base: .07rem solid $border-color
