Changed the avatar and added social icons

--- a/src/assets/sass/_typography.sass
+++ b/src/assets/sass/_typography.sass
@@ -1,7 +1,7 @@
 a
   color: $primary-color
   text-decoration: underline
-  transition: background-color .15s ease-in-out, color .15s ease-in-out, outline .1s ease-in-out
+  transition: background-color .15s ease, color .15s ease, outline .1s ease
   border: 0
 
   &:hover,
