Added highlight.js and added resume page ✌️

--- a/src/assets/sass/_typography.sass
+++ b/src/assets/sass/_typography.sass
@@ -1,3 +1,5 @@
+@import url("//fonts.googleapis.com/css?family=Suez+One|Ubuntu:300,400,500,700")
+
 a
   color: $primary-color
   text-decoration: underline
@@ -76,6 +78,9 @@ sup
   position: relative
   top: -.5em
 
+ul li > ul
+  margin-bottom: $spacing-small
+
 figcaption
   text-align: center
   font-style: italic
@@ -87,8 +92,8 @@ blockquote
   font-size: $font-size-big
   margin-top: $spacing-base
   margin-bottom: $spacing-base
-  text-align: center
-  line-height: 1.25
+  // text-align: center
+  line-height: 1.4
 
   p
     font-weight: $font-weight-light
