--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -6,6 +6,7 @@ $font-family-monospace: 'Fira Code', Menlo, Monaco, 'Courier New', Courier, mono
 $font-size-unit: 18px
 $font-size-base: 1rem
 $font-size-small: .875rem
+$font-size-mini: .65rem
 $font-size-big: 1.2rem
 
 $line-height-base: 1.875
