navbar and hero gradient

--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -18,6 +18,7 @@ $font-weight-regular: 500
 $font-weight-bold: 700
 
 $primary-color: #0860A8
+$primary-gradient-color: linear-gradient(to right top, $primary-color, lighten($primary-color, 5%), lighten($primary-color, 10%), lighten($primary-color, 15%), lighten($primary-color, 20%))
 $secondary-color: #629B96
 $tertiary-color: #FFEECB
 $silver-color: #D7E5E4
