Added about Skills

--- a/src/assets/sass/_typography.sass
+++ b/src/assets/sass/_typography.sass
@@ -76,8 +76,12 @@ sup
   position: relative
   top: -.5em
 
-ul li > ul
-  margin-bottom: $spacing-small
+ul
+  padding-left: $spacing-small
+  p
+    margin: 0
+  li > ul
+    margin-bottom: $spacing-mini
 
 figcaption
   text-align: center
