--- a/src/assets/sass/_animations.sass
+++ b/src/assets/sass/_animations.sass
@@ -6,6 +6,15 @@
   transform: translateX(10px)
   opacity: 0
 
+.lozad--fade
+  animation: lozadFade .2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both
+
+@keyframes lozadFade
+  from
+    opacity: 0
+  to
+    opacity: 1
+
 @keyframes slide-in-fwd-center
   0%
     transform: translateZ(-1400px)
