Add new component Alert.vue and add more projects

--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -17,18 +17,19 @@ $font-weight-normal: 400
 $font-weight-regular: 500
 $font-weight-bold: 700
 
-$primary-color: #0860A8
+$primary-color: #0860a8
 $primary-gradient-color: linear-gradient(to right top, $primary-color, lighten($primary-color, 5%), lighten($primary-color, 10%), lighten($primary-color, 15%), lighten($primary-color, 20%))
-$secondary-color: #629B96
-$tertiary-color: #FFEECB
-$silver-color: #D7E5E4
-$gray-color: #5B5B5B
+$secondary-color: #629b96
+$tertiary-color: #ffeecb
+$silver-color: #d7e5e4
+$gray-color: #5b5b5b
 $text-color: #404756
-$bg-base-color: #F1F1E6
-$border-color: #D1D2D3
+$bg-base-color: #f8f8e6
+$border-color: #d1d2d3
 
 $border-radius-base: .1875rem
 $border-base: .07rem solid $border-color
+$box-shadow-base: 0 2px 6px 0 rgba(32, 31, 32, 0.14)
 
 $spacing-mini: .625rem
 $spacing-small: 1.25rem
