--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -17,19 +17,18 @@ $font-weight-normal: 400
 $font-weight-regular: 500
 $font-weight-bold: 700
 
-$primary-color: #0860a8
-$primary-gradient-color: linear-gradient(to right top, $primary-color, lighten($primary-color, 5%), lighten($primary-color, 10%), lighten($primary-color, 15%), lighten($primary-color, 20%))
-$secondary-color: #629b96
-$tertiary-color: #ffeecb
+$primary-color: #006fb6
+$secondary-color: #4dba87
+$tertiary-color: #cffbe2
 $silver-color: #d7e5e4
 $gray-color: #5b5b5b
 $text-color: #404756
-$bg-base-color: #f8f8e6
-$border-color: #d1d2d3
+$bg-base-color: #f7f8f9
+$border-color: rgba($text-color, .1)
 
 $border-radius-base: .1875rem
 $border-base: .07rem solid $border-color
-$box-shadow-base: 0 2px 6px 0 rgba(32, 31, 32, 0.14)
+$box-shadow-base: 0 2px 6px 0 $border-color
 
 $spacing-mini: .625rem
 $spacing-small: 1.25rem
