Remove page animation

--- a/src/assets/sass/_animations.sass
+++ b/src/assets/sass/_animations.sass
@@ -1,10 +1,10 @@
-.page-leave-active
-  transition: opacity .2s cubic-bezier(1.0, .5, .8, 1.0)
+// .page-leave-active
+//   transition: opacity .2s cubic-bezier(1.0, .5, .8, 1.0)
 
-.page-enter,
-.page-leave-to
-  transform: translateX(10px)
-  opacity: 0
+// .page-enter,
+// .page-leave-to
+//   transform: translateX(10px)
+//   opacity: 0
 
 .lozad--fade
   animation: fadeIn .2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both
