--- a/assets/sass/_typography.sass
+++ b/assets/sass/_typography.sass
@@ -76,11 +76,13 @@ sup
   position: relative
   top: -.5em
 
-ul
+ul, ol
   padding-left: $spacing-small
+  margin-bottom: $spacing-small
   p
     margin: 0
-  li > ul
+  li > ul,
+  li > ol
     margin-bottom: $spacing-mini
 
 figcaption
