Add skills, whatsapp button and change share image

--- a/stylus/_base.styl
+++ b/stylus/_base.styl
@@ -20,7 +20,7 @@ body
   font-size $font-size-base
   line-height $line-height-base
   font-weight $font-weight-normal
-  background-color $snow-color
+  background-color #fafefc
   letter-spacing $letter-spacing-base
   color $feldgrau-color
   margin 0
