Change stylus variables and add menu svg animation

--- a/stylus/_article.styl
+++ b/stylus/_article.styl
@@ -2,14 +2,14 @@ article()
   border-radius 3px
   background-color white
   box-shadow 0 8px 20px 0 rgba(224, 224, 224, 0.5)
-  padding $spacing-small $spacing-base
+  padding spacingSmall spacingBase
   display block
   border 1px solid #eeeeee
   position relative
   min-height 360px
   @extend $clearfix
   &__description a
-    color $feldgrau-color
+    color feldgrauColor
     text-decoration none
     overflow hidden
     text-overflow ellipsis
@@ -20,9 +20,9 @@ article()
     text-transform uppercase
     opacity 0.65
     letter-spacing 0.1em
-    font-size $font-size-mini
-    padding-top $spacing-small
-    padding-bottom $spacing-small
+    font-size fontSizeMini
+    padding-top spacingSmall
+    padding-bottom spacingSmall
   &__title
     font-size 2rem
     margin-top 0.2em
