--- a/stylus/_base.styl
+++ b/stylus/_base.styl
@@ -1,5 +1,5 @@
 html
-  font-size $font-size-unit
+  font-size fontSizeUnit
   word-spacing 1px
   -moz-osx-font-smoothing grayscale
   -webkit-font-smoothing antialiased
@@ -16,18 +16,18 @@ html,body
   height 100%
 
 body
-  font-family $font-family-base
-  font-size $font-size-base
-  line-height $line-height-base
-  font-weight $font-weight-normal
+  font-family fontFamilyBase
+  font-size fontSizeBase
+  line-height lineHeightBase
+  font-weight fontWeightNormal
   background-color #fafefc
-  letter-spacing $letter-spacing-base
-  color $feldgrau-color
+  letter-spacing letterSpacingBase
+  color feldgrauColor
   margin 0
 
 hr
   border none
-  border-bottom $border-base
+  border-bottom borderBase
   margin-top 1.5rem
   margin-bottom 1.5rem
 
