--- a/stylus/_tooltip.styl
+++ b/stylus/_tooltip.styl
@@ -2,18 +2,18 @@
   display block
   z-index 100
   .tooltip-inner
-    background $davys-grey-color
+    background davysGreyColor
     color white
-    font-size $font-size-mini
+    font-size fontSizeMini
     border-radius 4px
-    padding ($spacing-mini / 2) $spacing-mini
+    padding (spacingMini / 2) spacingMini
   .tooltip-arrow
     width 0
     height 0
     border-style solid
     position absolute
     margin 5px
-    border-color $davys-grey-color
+    border-color davysGreyColor
   &[x-placement^="top"]
     margin-bottom 5px
     .tooltip-arrow
