--- a/stylus/_vars.styl
+++ b/stylus/_vars.styl
@@ -1,48 +1,52 @@
 /* font family */
-$font-family-base = "Ubuntu", Lato, Calibri, Arial, sans-serif
-$font-family-heading = "Suez One", $font-family-base
-$font-family-serif = Georgia, "Times New Roman", Times, serif
-$font-family-monospace = "Fira Code", Menlo, Monaco, "Courier New", Courier, monospace
+fontFamilyBase = "Ubuntu", Lato, Calibri, Arial, sans-serif
+fontFamilyHeading = "Suez One", fontFamilyBase
+fontFamilySerif = Georgia, "Times New Roman", Times, serif
+fontFamilyMonospace = "Fira Code", Menlo, Monaco, "Courier New", Courier, monospace
 
 /* font size */
-$font-size-unit = 18px
-$font-size-base = 1rem
-$font-size-small = 0.875rem
-$font-size-mini = 0.65rem
-$font-size-big = 1.2rem
+fontSizeUnit = 18px
+fontSizeBase = 1rem
+fontSizeSmall = 0.875rem
+fontSizeMini = 0.65rem
+fontSizeBig = 1.2rem
 
 /* fonts */
-$line-height-base = 1.875
-$letter-spacing-base = 0.01rem
+lineHeightBase = 1.875
+letterSpacingBase = 0.01rem
 
 /* font weight */
-$font-weight-light = 300
-$font-weight-normal = 400
-$font-weight-regular = 500
-$font-weight-bold = 700
+fontWeightLight = 300
+fontWeightNormal = 400
+fontWeightRegular = 500
+fontWeightBold = 700
 
 /* color pallete */
-$mint-color = #4dba87
-$ocean-blue-color = #0072c3
-$khaki-color = #efe683
-$honeydew-color = #e9fff2
-$davys-grey-color = #5b5b5b
-$feldgrau-color = #435466
-$snow-color = #fcfafa
-$border-color = rgba($davys-grey-color, 0.1)
-$link-color = $mint-color
+mintColor = #4dba87
+oceanBlueColor = #0072c3
+khakiColor = #efe683
+honeydewColor = #e9fff2
+davysGreyColor = #5b5b5b
+feldgrauColor = #435466
+snowColor = #fcfafa
+borderColor = rgba(davysGreyColor, 0.1)
+linkColor = mintColor
 
 /* borders */
-$border-radius-base = 0.1875rem
-$border-base = 0.07rem solid $border-color
-$box-shadow-base = 0 2px 6px 0 $border-color
+borderRadiusBase = 0.1875rem
+borderBase = 0.07rem solid borderColor
+boxShadowBase = 0 20px 20px rgba(#000, .08)
+boxShadowHover = 0 25px 25px rgba(#000, .12)
+
+/* animation */
+timingFunction = cubic-bezier(.02, .01, .47, 1)
 
 /* spacings */
-$spacing-mini = 0.625rem
-$spacing-small = 1.25rem
-$spacing-base = 1.875rem
-$spacing-large = 2.5rem
-$spacing-big = 3.125rem
+spacingMini = .6rem
+spacingSmall = 1.5rem
+spacingBase = 2rem
+spacingLarge = 3rem
+spacingBig = 4rem
 
 /* breakpoints and container widths */
 $desktop-large = 105rem
