--- a/stylus/_fonts.styl
+++ b/stylus/_fonts.styl
@@ -3,7 +3,7 @@
 @font-face
   font-family 'Suez One'
   font-style normal
-  font-weight 400
+  font-weight fontWeightNormal
   src local("Suez One"), local("SuezOne-Regular"), url(https://fonts.gstatic.com/s/suezone/v2/0RHaX4U39H5gje3plavIkBkAz4rYn47Zy2rvigWQf6w.woff2) format("woff2")
   unicode-range U+0590-05FF, U+20AA, U+25CC, U+FB1D-FB4F
 
@@ -11,7 +11,7 @@
 @font-face
   font-family 'Suez One'
   font-style normal
-  font-weight 400
+  font-weight fontWeightNormal
   src local("Suez One"), local("SuezOne-Regular"), url(https://fonts.gstatic.com/s/suezone/v2/NbP6qMfQq9hiuVWpHYLvhxkAz4rYn47Zy2rvigWQf6w.woff2) format("woff2")
   unicode-range U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF
 
@@ -19,7 +19,7 @@
 @font-face
   font-family 'Suez One'
   font-style normal
-  font-weight 400
+  font-weight fontWeightNormal
   src local("Suez One"), local("SuezOne-Regular"), url(https://fonts.gstatic.com/s/suezone/v2/ml_pO8aziPWinsvwguX7dHYhjbSpvc47ee6xR_80Hnw.woff2) format("woff2")
   unicode-range U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215
 
@@ -27,7 +27,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 300
+  font-weight fontWeightLight
   src local("Ubuntu Light"), local("Ubuntu-Light"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoC1CzjvWyNPYZvg7UI.woff2) format("woff2")
   unicode-range U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F
 
@@ -35,7 +35,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 300
+  font-weight fontWeightLight
   src local("Ubuntu Light"), local("Ubuntu-Light"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoC1CzjtGyNPYZvg7UI.woff2) format("woff2")
   unicode-range U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116
 
@@ -43,7 +43,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 300
+  font-weight fontWeightLight
   src local("Ubuntu Light"), local("Ubuntu-Light"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoC1CzjvGyNPYZvg7UI.woff2) format("woff2")
   unicode-range U+1F00-1FFF
 
@@ -51,7 +51,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 300
+  font-weight fontWeightLight
   src local("Ubuntu Light"), local("Ubuntu-Light"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoC1Czjs2yNPYZvg7UI.woff2) format("woff2")
   unicode-range U+0370-03FF
 
@@ -59,7 +59,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 300
+  font-weight fontWeightLight
   src local("Ubuntu Light"), local("Ubuntu-Light"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoC1CzjvmyNPYZvg7UI.woff2) format("woff2")
   unicode-range U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF
 
@@ -67,7 +67,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 300
+  font-weight fontWeightLight
   src local("Ubuntu Light"), local("Ubuntu-Light"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoC1CzjsGyNPYZvgw.woff2) format("woff2")
   unicode-range U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215
 
@@ -75,7 +75,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 400
+  font-weight fontWeightNormal
   src local("Ubuntu Regular"), local("Ubuntu-Regular"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCs6KVjbNBYlgoKcg72nU6AF7xm.woff2) format("woff2")
   unicode-range U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F
 
@@ -83,7 +83,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 400
+  font-weight fontWeightNormal
   src local("Ubuntu Regular"), local("Ubuntu-Regular"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCs6KVjbNBYlgoKew72nU6AF7xm.woff2) format("woff2")
   unicode-range U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116
 
@@ -91,7 +91,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 400
+  font-weight fontWeightNormal
   src local("Ubuntu Regular"), local("Ubuntu-Regular"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCs6KVjbNBYlgoKcw72nU6AF7xm.woff2) format("woff2")
   unicode-range U+1F00-1FFF
 
@@ -99,7 +99,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 400
+  font-weight fontWeightNormal
   src local("Ubuntu Regular"), local("Ubuntu-Regular"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCs6KVjbNBYlgoKfA72nU6AF7xm.woff2) format("woff2")
   unicode-range U+0370-03FF
 
@@ -107,7 +107,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 400
+  font-weight fontWeightNormal
   src local("Ubuntu Regular"), local("Ubuntu-Regular"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCs6KVjbNBYlgoKcQ72nU6AF7xm.woff2) format("woff2")
   unicode-range U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF
 
@@ -115,7 +115,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 400
+  font-weight fontWeightNormal
   src local("Ubuntu Regular"), local("Ubuntu-Regular"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCs6KVjbNBYlgoKfw72nU6AFw.woff2) format("woff2")
   unicode-range U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215
 
@@ -123,7 +123,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 500
+  font-weight fontWeightRegular
   src local("Ubuntu Medium"), local("Ubuntu-Medium"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoCjC3jvWyNPYZvg7UI.woff2) format("woff2")
   unicode-range U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F
 
@@ -131,7 +131,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 500
+  font-weight fontWeightRegular
   src local("Ubuntu Medium"), local("Ubuntu-Medium"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoCjC3jtGyNPYZvg7UI.woff2) format("woff2")
   unicode-range U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116
 
@@ -139,7 +139,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 500
+  font-weight fontWeightRegular
   src local("Ubuntu Medium"), local("Ubuntu-Medium"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoCjC3jvGyNPYZvg7UI.woff2) format("woff2")
   unicode-range U+1F00-1FFF
 
@@ -147,7 +147,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 500
+  font-weight fontWeightRegular
   src local("Ubuntu Medium"), local("Ubuntu-Medium"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoCjC3js2yNPYZvg7UI.woff2) format("woff2")
   unicode-range U+0370-03FF
 
@@ -155,7 +155,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 500
+  font-weight fontWeightRegular
   src local("Ubuntu Medium"), local("Ubuntu-Medium"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoCjC3jvmyNPYZvg7UI.woff2) format("woff2")
   unicode-range U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF
 
@@ -163,7 +163,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 500
+  font-weight fontWeightRegular
   src local("Ubuntu Medium"), local("Ubuntu-Medium"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoCjC3jsGyNPYZvgw.woff2) format("woff2")
   unicode-range U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215
 
@@ -171,7 +171,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 700
+  font-weight fontWeightBold
   src local("Ubuntu Bold"), local("Ubuntu-Bold"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoCxCvjvWyNPYZvg7UI.woff2) format("woff2")
   unicode-range U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F
 
@@ -179,7 +179,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 700
+  font-weight fontWeightBold
   src local("Ubuntu Bold"), local("Ubuntu-Bold"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoCxCvjtGyNPYZvg7UI.woff2) format("woff2")
   unicode-range U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116
 
@@ -187,7 +187,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 700
+  font-weight fontWeightBold
   src local("Ubuntu Bold"), local("Ubuntu-Bold"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoCxCvjvGyNPYZvg7UI.woff2) format("woff2")
   unicode-range U+1F00-1FFF
 
@@ -195,7 +195,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 700
+  font-weight fontWeightBold
   src local("Ubuntu Bold"), local("Ubuntu-Bold"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoCxCvjs2yNPYZvg7UI.woff2) format("woff2")
   unicode-range U+0370-03FF
 
@@ -203,7 +203,7 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 700
+  font-weight fontWeightBold
   src local("Ubuntu Bold"), local("Ubuntu-Bold"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoCxCvjvmyNPYZvg7UI.woff2) format("woff2")
   unicode-range U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF
 
@@ -211,6 +211,6 @@
 @font-face
   font-family 'Ubuntu'
   font-style normal
-  font-weight 700
+  font-weight fontWeightBold
   src local("Ubuntu Bold"), local("Ubuntu-Bold"), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCv6KVjbNBYlgoCxCvjsGyNPYZvgw.woff2) format("woff2")
   unicode-range U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215
