--- a/stylus/_vars.styl
+++ b/stylus/_vars.styl
@@ -48,11 +48,10 @@ spacingBase = 2rem
 spacingLarge = 3rem
 spacingBig = 4rem
 
-/* breakpoints and container widths */
-$desktop-large = 105rem
-$desktop = 80rem
-$tablet-large = 64rem
-$tablet = 48rem
-$mobile-large = 30rem
-$mobile = 20rem
-$container-width = 1260px
+/* breakpoints and container width */
+xs = 0
+sm = 520px
+md = 768px
+lg = 992px
+xlg = 1200px
+containerWidth = 1260px
