--- a/stylus/_base.styl
+++ b/stylus/_base.styl
@@ -27,9 +27,32 @@ body
 
 hr
   border none
-  border-bottom borderBase
-  margin-top 1.5rem
-  margin-bottom 1.5rem
+  max-width 80px
+  height 10px
+  margin spacingLarge auto
+  position relative
+  &:before,
+  &:after
+    content ''
+    display block
+    width 75%
+    height 4px
+    position absolute
+    transform rotate(-5deg)
+    transition .12s transform timingFunction
+  &:before
+    background-color mintColor
+    top 0
+    left 0
+  &:after
+    background-color feldgrauColor
+    bottom 0
+    right 0
+  &:hover,
+  &:focus
+    &:before,
+    &:after
+      transform rotate(-365deg)
 
 figure
   margin 0
