--- a/stylus/base/_typography.styl
+++ b/stylus/base/_typography.styl
@@ -1,7 +1,10 @@
 a
   color linkColor
   text-decoration underline
-  transition background-color 0.15s timingFunction, color 0.15s timingFunction, outline 0.1s timingFunction
+  transition background-color 0.15s timingFunction,
+    color 0.15s timingFunction,
+    border 0.1s timingFunction,
+    outline 0.1s timingFunction
   border 0
   &:hover,
   &:active,
