--- a/stylus/placeholders.styl
+++ b/stylus/placeholders.styl
@@ -1,4 +1,17 @@
-article()
+$clearfix
+  &:after
+    content ""
+    display table
+    clear both
+
+$container
+  max-width: containerWidth
+  margin-left: auto
+  margin-right: auto
+  padding-right: spacingSmall
+  padding-left: spacingSmall
+
+$article
   border-radius 3px
   background-color white
   box-shadow 0 8px 20px 0 rgba(224, 224, 224, 0.5)
