Add mental spark, CTA for Whatapp and project Wordpress.curitiba.br

--- a/stylus/base/_base.styl
+++ b/stylus/base/_base.styl
@@ -20,7 +20,7 @@ body
   font-size fontSizeBase
   line-height lineHeightBase
   font-weight fontWeightNormal
-  background-color #fafefc
+  background-color #f5f4f6
   letter-spacing letterSpacingBase
   color feldgrauColor
   margin 0
